--- a/src/app/chuck/componentes/verfrase/verfrase.component.html
+++ b/src/app/chuck/componentes/verfrase/verfrase.component.html
@@ -1,1 +1,18 @@
-<p>verfrase works!</p>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Chiste Chuck</th>
+        <th scope="col">Editar</th>
+        <th scope="col">Eliminar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td><h3>{{ frase.value }}</h3></td>
+        <td><button>Editar</button></td>
+        <td><button>Borrar</button></td>
+      </tr>
+    </tbody>
+  </table>
